--- a/app/src/main/res/layout/activity_add_wallet.xml
+++ b/app/src/main/res/layout/activity_add_wallet.xml
@@ -8,7 +8,7 @@
 
     <EditText
         android:id="@+id/edit_text_wallet_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
@@ -16,11 +16,15 @@
         android:inputType="textPersonName"
         android:hint="@string/wallet_name"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/spinner_currency"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="0dp"
+        app:layout_constraintHorizontal_bias="0.0" />
 
     <EditText
         android:id="@+id/edit_text_wallet_amount"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:ems="10"
@@ -28,22 +32,25 @@
         android:hint="@string/wallet_amount"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
+        app:layout_constraintRight_toLeftOf="@+id/spinner_currency"
+        android:layout_marginRight="0dp"
+        app:layout_constraintHorizontal_bias="0.0"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/edit_text_wallet_name" />
 
     <Spinner
         android:id="@+id/spinner_currency"
-        android:layout_width="0dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/edit_text_wallet_amount"
-        app:layout_constraintLeft_toRightOf="@+id/edit_text_wallet_amount"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/edit_text_wallet_amount"
-        app:layout_constraintHorizontal_bias="0.44" />
+        app:layout_constraintVertical_bias="0.444" />
 
     <ImageButton
-        android:id="@+id/image_button_add"
+        android:id="@+id/image_button_post_wallet"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -53,7 +60,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_text_wallet_amount"
         app:srcCompat="@android:drawable/ic_input_add"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_wallet_amount" />
+
 </android.support.constraint.ConstraintLayout>
