--- a/app/src/main/res/layout/activity_edit_wallet.xml
+++ b/app/src/main/res/layout/activity_edit_wallet.xml
@@ -4,53 +4,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.garbage.wallet.AddWalletActivity">
+    tools:context="com.example.garbage.wallet.EditWalletActivity">
 
     <EditText
-        android:id="@+id/et_add_wallet_name"
+        android:id="@+id/et_edit_wallet_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="@string/wallet_name"
+        android:text=""
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/s_wallet_currency"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="0dp"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintRight_toLeftOf="@+id/tv_edit_wallet_currency"
+        android:layout_marginRight="8dp" />
 
     <EditText
-        android:id="@+id/et_add_wallet_amount"
+        android:id="@+id/et_edit_wallet_amount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:ems="10"
         android:inputType="numberDecimal"
-        android:hint="@string/wallet_amount"
+        android:text=""
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
-        app:layout_constraintRight_toLeftOf="@+id/s_wallet_currency"
+        app:layout_constraintRight_toLeftOf="@+id/tv_edit_wallet_currency"
         android:layout_marginRight="0dp"
         app:layout_constraintHorizontal_bias="0.0"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/et_add_wallet_name" />
+        app:layout_constraintTop_toBottomOf="@+id/et_edit_wallet_name" />
 
-    <Spinner
-        android:id="@+id/s_wallet_currency"
+    <TextView
+        android:id="@+id/tv_edit_wallet_currency"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/et_add_wallet_amount"
+        android:layout_marginTop="8dp"
+        android:text=""
+        app:layout_constraintBottom_toBottomOf="@+id/et_edit_wallet_amount"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/et_add_wallet_amount"
-        app:layout_constraintVertical_bias="0.444" />
+        app:layout_constraintTop_toTopOf="@+id/et_edit_wallet_amount" />
 
     <ImageButton
-        android:id="@+id/ib_add_wallet"
+        android:id="@+id/ib_edit_wallet"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -62,6 +63,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@android:drawable/ic_input_add"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/et_add_wallet_amount" />
+        app:layout_constraintTop_toBottomOf="@+id/et_edit_wallet_amount" />
 
 </android.support.constraint.ConstraintLayout>
