--- a/app/src/main/res/layout/activity_edit_expenditure.xml
+++ b/app/src/main/res/layout/activity_edit_expenditure.xml
@@ -31,7 +31,8 @@
         android:text="Update"
         app:layout_constraintRight_toLeftOf="@+id/b_delete_expenditure"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/et_edit_expenditure_name" />
+        app:layout_constraintTop_toBottomOf="@+id/et_edit_expenditure_name"
+        android:layout_marginEnd="8dp" />
 
     <Button
         android:id="@+id/b_delete_expenditure"
@@ -43,5 +44,20 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/et_edit_expenditure_name" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_expenditure_cost_item_list"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
+        android:scrollbars="none"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/b_update_expenditure" />
 
 </android.support.constraint.ConstraintLayout>
