--- a/app/src/main/res/layout/activity_shortcut_one.xml
+++ b/app/src/main/res/layout/activity_shortcut_one.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.garbage.ShortcutOneActivity">
+    tools:context="com.example.garbage.shortcut.ShortcutOneActivity">
 
     <TextView
         android:id="@+id/textView"
