--- a/app/src/main/res/layout/activity_sqlite.xml
+++ b/app/src/main/res/layout/activity_sqlite.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.garbage.SQLiteActivity">
+    tools:context="com.example.garbage.database.SQLiteActivity">
 
     <ScrollView
         android:layout_width="wrap_content"
