--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:id="@+id/tv_income_items_label"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -19,7 +19,9 @@
         android:textSize="14sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <HorizontalScrollView
         android:id="@+id/horizontal_scroll_view_income_items"
@@ -65,7 +67,7 @@
 
     <TextView
         android:id="@+id/tv_wallets_label"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -73,7 +75,9 @@
         android:text="@string/tv_wallets_label"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/horizontal_scroll_view_income_items" />
+        app:layout_constraintTop_toBottomOf="@+id/horizontal_scroll_view_income_items"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <HorizontalScrollView
         android:id="@+id/horizontal_scroll_view_wallets"
@@ -119,7 +123,7 @@
 
     <TextView
         android:id="@+id/tv_expenditures_label"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -127,7 +131,9 @@
         android:text="@string/tv_expenditures_label"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/horizontal_scroll_view_wallets" />
+        app:layout_constraintTop_toBottomOf="@+id/horizontal_scroll_view_wallets"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <ScrollView
         android:id="@+id/scrollView2"
